# rust-api-server-example

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  request.http
src/: lib.rs  main.rs
src/handler/: create_post.rs  get_post.rs  mod.rs
src/service/: mod.rs  post.rs
