[package]
name = "rust-api-server-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "2.2.0"
serde = "1"
serde_json = "1"
chrono = { version = "0.4.19", features = ["serde"] }